final-project/final-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-app-deployment
  labels:
    app: final-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-project
  template:
    metadata:
      name: final-app
      labels:
        app: final-project
    spec:
      containers:
        - name: final-project-kb8
          image: ximegasub/python-flask-kb8:0.5
          ports:
            - containerPort: 8000
