final-project/final-mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-mysql-deployment
  labels:
    app: final-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-project
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: final-mysql
      labels:
        app: final-project
    spec:
      containers:
        - name: db
          image: mysql:5.7
          ports:
            - containerPort: 3306
