final-project/final-mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: final-mysql-service
  labels:
    app: final-project
spec:
  selector:
    app: final-project
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
