final-project/final-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-project-ingress
  labels:
    app: final-project
spec:
  rules:
  - http:
      paths: 
      - path: /add-employee
        pathType: Prefix
        backend:
          service:
            name: final-project-service
            port:
              number: 8000
